# simple-rag

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  endpoints.py  llm_chat.py
app/core/: __init__.py  config.py  template_loader.py
app/default_templates/prompts/: context-driven-generic-template.md
app/extractors/: markdown.py
app/language_models/: moonshot.py
app/persistence/: vectors.py
app/providers/: llm.py
tests/: test_main.py
tests/resources/: constants.py
tests/resources/GB_Mandatory/: GB-25034-2020.md  NOTICE.txt
